--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,16 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
     implementation 'com.alibaba:fastjson:1.2.76'
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation  'io.reactivex.rxjava2:rxjava:+'
     implementation  'io.reactivex.rxjava2:rxandroid:+'
     //rxpermission（配套rxjava使用的）
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:+'
+
+
+    implementation 'com.tamic.fastdownloader:Android-FastDownloader:1.0.3'
 
 
     implementation project(path: ':boat')
