--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HAMCL"
-        android:name=".HAMCL"
+        android:name=".HelloAndroidMinecraftLauncherApplication"
         android:requestLegacyExternalStorage="true"
         tools:ignore="HardcodedDebugMode">
         <activity
@@ -50,6 +50,7 @@
             android:name="cosine.boat.LauncherActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"/>
+        <activity android:name=".CrashHandler$CrashActiviy"/>
 
         <service
             android:name="cosine.boat.logcat.LogcatService"
